Fixeada la generacion de alquileres con el endpoint de testeo